# APISample-FastAPI

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  main.py  routers.py
app/database/: database.py  models.py  schemas.py
